--- a/locale/pt_br/LC_MESSAGES/django.po
+++ b/locale/pt_br/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-15 15:50-0300\n"
+"POT-Creation-Date: 2023-12-15 16:48-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,3 +29,7 @@ msgstr "Porções"
 #: .\recipes\templates\recipes\partials\recipe.html:88
 msgid "read more"
 msgstr "ler mais"
+
+#: .\recipes\views.py:104
+msgid "Category"
+msgstr "Categoria"
